--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <!-- TODO 3: Add the URL to your GitHub Pages repository -->
             <ul id="anchor-list">
                 <li><a>GitHub</a></li>
+                <a href="https://github.com/Anson1314/Anson1314.github.io"></a>
             </ul>
         </nav>
 
@@ -32,8 +33,8 @@
                 <!-- TODO 4: Assign an h1 heading and a short description about you -->
                 <!-- TODO 4: Replace the 2 <span>...</span> tags with 2 appropriate tags -->
                 <span>
-                    <h1>[h1]</h1>
-                    <span>[Short description]</span>
+                    <h1>[About Me]</h1>
+                    <span>[I am a university student who is interested in programming!]</span>
                 </span>
                 <!-- TODO 4: Add an avatar -->
                 <img id="avatar" />
