--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
             <!-- TODO 3: Add the URL to your GitHub Pages repository -->
             <ul id="anchor-list">
-                <li><a>GitHub</a></li>
-                <a href="https://github.com/Anson1314/Anson1314.github.io"></a>
+                <a href="https://github.com/Anson1314/Anson1314.github.io"><li><a>GitHub</a></li></a>
             </ul>
         </nav>
 
@@ -33,11 +32,11 @@
                 <!-- TODO 4: Assign an h1 heading and a short description about you -->
                 <!-- TODO 4: Replace the 2 <span>...</span> tags with 2 appropriate tags -->
                 <span>
-                    <h1>[About Me]</h1>
+                    <h1>[Hi! I'm Anson!]</h1>
                     <span>[I am a university student who is interested in programming!]</span>
                 </span>
                 <!-- TODO 4: Add an avatar -->
-                <img id="avatar" />
+                <img src="assets/avatar.png" alt="My Avatar">
             </section>
 
             <hr />
