--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <section id="about">
                 <h2>About</h2>
                 <!-- TODO 5: A short paragraph about you -->
-                <p>[Short paragraph]</p>
+                <p>[As a second-year computer science student, you're building a crucial foundation in core principles like data structures, algorithms, and object-oriented design. This year challenges you to move beyond syntax to solve complex problems computationally, preparing you for advanced topics and specializations in the vast field of technology.]</p>
             </section>
 
             <hr />
