--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <span>[I am a university student who is interested in programming!]</span>
                 </span>
                 <!-- TODO 4: Add an avatar -->
-                <img src="assets/avatar.png" alt="My Avatar">
+                <img src="assets/cat.png" alt="My Avatar">
             </section>
 
             <hr />
@@ -44,7 +44,10 @@
             <section id="about">
                 <h2>About</h2>
                 <!-- TODO 5: A short paragraph about you -->
-                <p>[As a second-year computer science student, you're building a crucial foundation in core principles like data structures, algorithms, and object-oriented design. This year challenges you to move beyond syntax to solve complex problems computationally, preparing you for advanced topics and specializations in the vast field of technology.]</p>
+                <p>[As a second-year computer science student, 
+                    I'm building a crucial foundation in core principles like data structures, algorithms, and object-oriented design. 
+                    This year challenges me to move beyond syntax to solve complex problems computationally, 
+                    preparing me for advanced topics and specializations in the vast field of technology.]</p>
             </section>
 
             <hr />
