--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                 <h2>Skills</h2>
                 <!-- TODO 6: Elaborate more skills using HTML elements -->
                 <div id="skill-set">
+                    <h1>Python</h1>
+                    <h1>C++</h1>
+                    <h1>HTML</h1>
                 </div>
             </section>
 
@@ -64,7 +67,7 @@
             <section id="contact">
                 <h2>Contact</h2>
                 <!-- TODO 7: Put your HKUST email without the domain -->
-                <p>[username of the email]</p>
+                <p>[ychenov@connect.ust.hk]</p>
             </section>
         </div>
 
