--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <!-- TODO 2: Add an logo and a name -->
             <a href="./" id="logo">
                 <img src="assets/logo.png" alt="My Logo">
-                [Anson]
+                Anson
             </a>
 
             <button id="anchor-list-trigger" onclick="toggleAnchorList()">
@@ -32,8 +32,8 @@
                 <!-- TODO 4: Assign an h1 heading and a short description about you -->
                 <!-- TODO 4: Replace the 2 <span>...</span> tags with 2 appropriate tags -->
                 <span>
-                    <h1>[Hi! I'm Anson!]</h1>
-                    <span>[I am a university student who is interested in programming!]</span>
+                    <h1>Hi! I'm Anson!</h1>
+                    <span>I am a university student who is interested in programming!</span>
                 </span>
                 <!-- TODO 4: Add an avatar -->
                 <img src="assets/cat.png" alt="My Avatar">
@@ -44,10 +44,10 @@
             <section id="about">
                 <h2>About</h2>
                 <!-- TODO 5: A short paragraph about you -->
-                <p>[As a second-year computer science student, 
+                <p>As a second-year computer science student, 
                     I'm building a crucial foundation in core principles like data structures, algorithms, and object-oriented design. 
                     This year challenges me to move beyond syntax to solve complex problems computationally, 
-                    preparing me for advanced topics and specializations in the vast field of technology.]</p>
+                    preparing me for advanced topics and specializations in the vast field of technology.</p>
             </section>
 
             <hr />
@@ -67,7 +67,7 @@
             <section id="contact">
                 <h2>Contact</h2>
                 <!-- TODO 7: Put your HKUST email without the domain -->
-                <p>[ychenov@connect.ust.hk]</p>
+                <p>ychenov@connect.ust.hk</p>
             </section>
         </div>
 
