--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <!-- TODO 3: Add the URL to your GitHub Pages repository -->
             <ul id="anchor-list">
-                <a href="https://github.com/Anson1314/Anson1314.github.io"><li><a>GitHub</a></li></a>
+                <li><a href="https://github.com/Anson1314/Anson1314.github.io">GitHub</a></li>
             </ul>
         </nav>
 
