--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <section id="hero">
                 <!-- TODO 4: Assign an h1 heading and a short description about you -->
                 <!-- TODO 4: Replace the 2 <span>...</span> tags with 2 appropriate tags -->
-                <span>
+                <div class="hero-text">
                     <h1>Hi! I'm Anson!</h1>
-                    <span>I am a university student who is interested in programming!</span>
-                </span>
+                    <p>I am a university student who is interested in programming!</p>
+                </div>
                 <!-- TODO 4: Add an avatar -->
                 <img src="assets/cat.png" alt="My Avatar">
             </section>
