--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <p>I am a university student who is interested in programming!</p>
                 </div>
                 <!-- TODO 4: Add an avatar -->
-                <img src="assets/cat.png" alt="My Avatar">
+                <img src="assets/cat2.png" alt="My Avatar">
             </section>
 
             <hr />
