--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <section id="hero">
                 <!-- TODO 4: Assign an h1 heading and a short description about you -->
                 <!-- TODO 4: Replace the 2 <span>...</span> tags with 2 appropriate tags -->
-                <div class="hero-text">
+                <div class="hero-content">
                     <h1>Hi! I'm Anson!</h1>
                     <p>I am a university student who is interested in programming!</p>
                 </div>
                 <!-- TODO 4: Add an avatar -->
-                <img src="assets/cat.png" alt="My Avatar">
+                <img src="assets/cat.png" alt="My Avatar" id="avatar">
             </section>
 
             <hr />
