--- a/index.html
+++ b/index.html
@@ -56,9 +56,18 @@
                 <h2>Skills</h2>
                 <!-- TODO 6: Elaborate more skills using HTML elements -->
                 <div id="skill-set">
-                    <h1>Python</h1>
-                    <h1>C++</h1>
-                    <h1>HTML</h1>
+                    <div class="skill">
+                        <img src="assets/python.png" alt="Python">
+                        <span>Python</span>
+                    </div>
+                    <div class="skill">
+                        <img src="assets/cpp.png" alt="C++">
+                        <span>C++</span>
+                    </div>
+                    <div class="skill">
+                        <img src="assets/html.png" alt="HTML">
+                        <span>HTML</span>
+                    </div>
                 </div>
             </section>
 
