--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="index.css" />
         <!-- TODO 1: Add a favicon and a title -->
-        <h1>Welcome to My Page!!!</h1>
+        <title>Welcome to My Page!!!</title>
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     </head>
     <body>
         <nav>
