--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="index.css" />
         <!-- TODO 1: Add a favicon and a title -->
         <title>Welcome to Anson's Page!!!</title>
-        <link rel="icon" type="image/png" href="assets/logo.png">
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     </head>
     <body>
         <nav>
